--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+
+    <style name="CustomTitleTextAppearance">
+        <item name="android:textSize">14sp</item>
+    </style>
+
 </resources>
