--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,17 +8,18 @@
 
 
     <FrameLayout
+        android:id="@+id/main_frame"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/bottomBar"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.roughike.bottombar.BottomBar
-        android:id="@+id/bottomBar"
+        android:id="@+id/bottom_bar"
         android:layout_width="match_parent"
         android:layout_height="64dp"
         android:background="#FFFFFF"
-        app:bb_activeTabColor="@color/colorPrimaryDark"
+        app:bb_activeTabColor="@color/colorPrimary"
         app:bb_behavior="shifting"
         app:bb_inActiveTabAlpha="0.3"
         app:bb_inActiveTabColor="@android:color/black"
