--- a/app/src/main/res/layout/item_code_list.xml
+++ b/app/src/main/res/layout/item_code_list.xml
@@ -1,13 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/shape_white_r_10"
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/code_title_tv"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
+        android:ellipsize="end"
+        android:gravity="start"
+        android:singleLine="true"
+        android:textColor="@color/normal_tv"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/code_type_tv"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="放股份大股东松放DFGFGDF给对方干豆腐干豆腐松豆腐干豆腐松" />
+
+    <TextView
+        android:id="@+id/code_type_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="放股份大股东松放松" />
+        android:textColor="@color/colorPrimary"
+        android:textSize="14sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/code_title_tv"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:text="android" />
+
+    <TextView
+        android:id="@+id/code_content_tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        android:ellipsize="end"
+        android:maxLines="3"
+        android:textColor="@color/light_tv"
+        android:textSize="14sp"
+        app:layout_constraintTop_toBottomOf="@+id/code_title_tv"
+        tools:text="放股份大股东松放DFG放股份大股东松放DFGFGDF给对方干豆腐干豆腐松豆腐干豆腐松放股份大股东松放DFGFGDF给对方干豆腐干豆腐松豆腐干豆腐松放股份大股东松放DFGFGDF给对方干豆腐干豆腐松豆腐干豆腐松FGDF给对方干豆腐干豆腐松豆腐干豆腐松" />
+
+    <TextView
+        android:id="@+id/code_date_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:textColor="@color/light_tv"
+        android:textSize="13sp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/code_content_tv"
+        tools:text="2020:9:1 10:10" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
