--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#ffd04b</color>
     <color name="colorPrimaryDark">#f4ea2a</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="normal_tv">#333</color>
+    <color name="light_tv">#555</color>
+    <color name="black_color">#000</color>
+    <color name="white_color">#fff</color>
 </resources>
