--- a/app/src/main/res/layout/item_code_list.xml
+++ b/app/src/main/res/layout/item_code_list.xml
@@ -16,7 +16,7 @@
         android:gravity="start"
         android:singleLine="true"
         android:textColor="@color/normal_tv"
-        android:textSize="14sp"
+        android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/code_type_tv"
@@ -35,13 +35,16 @@
 
     <TextView
         android:id="@+id/code_content_tv"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="6dp"
         android:layout_marginTop="6dp"
         android:ellipsize="end"
         android:maxLines="3"
         android:textColor="@color/light_tv"
         android:textSize="14sp"
+        app:layout_constraintLeft_toRightOf="@+id/code_cover_img"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/code_title_tv"
         tools:text="放股份大股东松放DFG放股份大股东松放DFGFGDF给对方干豆腐干豆腐松豆腐干豆腐松放股份大股东松放DFGFGDF给对方干豆腐干豆腐松豆腐干豆腐松放股份大股东松放DFGFGDF给对方干豆腐干豆腐松豆腐干豆腐松FGDF给对方干豆腐干豆腐松豆腐干豆腐松" />
 
@@ -55,5 +58,16 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/code_content_tv"
         tools:text="2020:9:1 10:10" />
+
+    <ImageView
+        android:id="@+id/code_cover_img"
+        android:layout_width="120dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="6dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/code_content_tv"
+        app:layout_constraintTop_toBottomOf="@+id/code_title_tv"
+        tools:src="@mipmap/ic_launcher" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
