--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#f4ea2a</color>
     <color name="colorAccent">#03DAC5</color>
 
+    <color name="app_bg_color">#F3F5F8</color>
     <color name="normal_tv">#333</color>
     <color name="light_tv">#555</color>
     <color name="black_color">#000</color>
