--- a/app/src/main/res/layout/frag_code.xml
+++ b/app/src/main/res/layout/frag_code.xml
@@ -4,17 +4,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <net.lucode.hackware.magicindicator.MagicIndicator
-        android:id="@+id/magic_indicator"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/magic_indicator_cl"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <net.lucode.hackware.magicindicator.MagicIndicator
+            android:id="@+id/magic_indicator"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/add_type_iv" />
+
+        <ImageView
+            android:id="@+id/add_type_iv"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@color/app_bg_color"
+            android:padding="8dp"
+            android:src="@mipmap/add_ic"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/magic_indicator" />
+        app:layout_constraintTop_toBottomOf="@+id/magic_indicator_cl" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
