--- a/baselib/src/main/res/layout/base_toolbar_layout.xml
+++ b/baselib/src/main/res/layout/base_toolbar_layout.xml
@@ -5,11 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <androidx.appcompat.widget.Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:titleTextColor="#fff" />
+    <include layout="@layout/v_toolbar" />
 
     <FrameLayout
         android:id="@+id/content"
