用户自定义tablayout及缓存

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="light_tv">#555</color>
     <color name="black_color">#000</color>
     <color name="white_color">#fff</color>
+    <color name="enable_click_bg_color">#aaa</color>
 </resources>
