--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,7 @@
     <color name="white_color">#fff</color>
     <color name="enable_click_bg_color">#aaa</color>
     <color name="btn_color">#236ee1</color>
+    <color name="btn_press_color">#408bff</color>
     <color name="dividle_line_color">#e3e3e3</color>
+    <color name="hint_normal">#ccc</color>
 </resources>
