--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,4 +19,15 @@
         <item name="android:windowBackground">@drawable/splash_logo_list</item>
     </style>
 
+    <style name="my_et" parent="Theme.AppCompat.Light">
+        <item name="colorControlNormal">@color/app_bg_color</item>
+        <item name="colorControlActivated">@color/app_bg_color</item>
+    </style>
+
+    <style name="my_et_2dp" parent="my_et">
+        <item name="colorControlActivated">@color/colorPrimaryDark</item>
+        <item name="android:textCursorDrawable">@drawable/cursor_color</item>
+    </style>
+
+
 </resources>
