--- a/widgetlib/src/main/res/values/colors.xml
+++ b/widgetlib/src/main/res/values/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="text_normal">#6A6868</color>
+    <color name="btn_color">#236ee1</color>
 </resources>
