--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,10 @@
     <color name="btn_press_color">#408bff</color>
     <color name="dividle_line_color">#e3e3e3</color>
     <color name="hint_normal">#ccc</color>
+
+    <color name="chart_fill_color1">#6b5aeb</color>
+    <color name="chart_fill_color2">#34aadc</color>
+    <color name="chart_fill_color3">#ff9500</color>
+    <color name="chart_fill_color4">#ff3ebd</color>
+    <color name="chart_fill_color5">#ff4f3e</color>
 </resources>
