--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,18 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowBackground">@color/app_bg_color</item>
+        <item name="android:windowAnimationStyle">@style/act_anim_style</item>
+    </style>
+
+    <style name="act_anim_style" parent="@android:style/Animation">
+        <!-- 新Activity 进入 -->
+        <item name="android:activityOpenEnterAnimation">@anim/slide_right_in</item>
+        <!-- 旧Activity退出 -->
+        <item name="android:activityOpenExitAnimation">@anim/slide_left_out</item>
+        <!-- 新Activity退出 -->
+        <item name="android:activityCloseExitAnimation">@anim/slide_right_out</item>
+        <!-- 旧Activity进入 -->
+        <item name="android:activityCloseEnterAnimation">@anim/slide_left_in</item>
     </style>
 
     <style name="CustomTitleTextAppearance">
@@ -28,6 +40,5 @@
         <item name="colorControlActivated">@color/colorPrimaryDark</item>
         <item name="android:textCursorDrawable">@drawable/cursor_color</item>
     </style>
-
 
 </resources>
