--- a/app/src/main/res/layout/frag_manager_login.xml
+++ b/app/src/main/res/layout/frag_manager_login.xml
@@ -19,11 +19,10 @@
         android:id="@+id/et_body_cl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/lock_iv">
 
         <EditText
             android:id="@+id/login_account_et"
