--- a/baselib/src/main/res/values/colors.xml
+++ b/baselib/src/main/res/values/colors.xml
@@ -6,4 +6,11 @@
 
     <color name="toast_white">#ffffff</color>
     <color name="toast_stroke_gray">#99d4d4d4</color>
+
+    <color name="text_normal">#6A6868</color>
+    <color name="btn_color">#236ee1</color>
+
+    <color name="white">#FFFFFF</color>
+    <color name="alpha_black_80">#80000000</color>
+
 </resources>
