--- a/app/src/main/res/layout/frag_manager_login.xml
+++ b/app/src/main/res/layout/frag_manager_login.xml
@@ -9,7 +9,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="100dp"
-        android:src="@mipmap/lock_ic"
+        android:src="@drawable/lock_ic"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
