--- a/baselib/src/main/res/layout/item_filter_date.xml
+++ b/baselib/src/main/res/layout/item_filter_date.xml
@@ -30,7 +30,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:background="@drawable/shape_stroke_gray_4"
-            android:drawableRight="@mipmap/calendar"
+            android:drawableRight="@drawable/calendar"
             android:gravity="center"
             android:paddingRight="10dp"
             android:text="请选择开始时间"
@@ -46,7 +46,7 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
             android:background="@drawable/shape_stroke_gray_4"
-            android:drawableRight="@mipmap/calendar"
+            android:drawableRight="@drawable/calendar"
             android:gravity="center"
             android:paddingRight="10dp"
             android:text="请选择结束时间"
