--- a/app/src/main/res/drawable/splash_logo_list.xml
+++ b/app/src/main/res/drawable/splash_logo_list.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@mipmap/launch_bg" />
+    <item android:drawable="@drawable/launch_bg" />
 </layer-list>
