--- a/app/src/main/res/layout/dialog_download_img.xml
+++ b/app/src/main/res/layout/dialog_download_img.xml
@@ -14,7 +14,7 @@
         android:layout_height="60dp"
         android:gravity="center"
         android:text="保存图片"
-        android:textColor="@color/btn_color"
+        android:textColor="@color/xwidget_btn_color"
         android:textSize="16sp" />
 
     <TextView
