--- a/app/src/main/res/layout/frag_manager_data.xml
+++ b/app/src/main/res/layout/frag_manager_data.xml
@@ -78,7 +78,7 @@
                 android:id="@+id/chart_tip_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@mipmap/chart_ic"
+                android:drawableLeft="@drawable/chart_ic"
                 android:drawablePadding="5dp"
                 android:text="统计"
                 android:textColor="@color/normal_tv"
@@ -90,7 +90,7 @@
             <androidx.appcompat.widget.AppCompatImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/go_arrow"
+                android:src="@drawable/go_arrow"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -111,7 +111,7 @@
                 android:id="@+id/code_tip_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@mipmap/bar_code"
+                android:drawableLeft="@drawable/bar_code"
                 android:drawablePadding="5dp"
                 android:text="code"
                 android:textColor="@color/normal_tv"
@@ -123,7 +123,7 @@
             <androidx.appcompat.widget.AppCompatImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/go_arrow"
+                android:src="@drawable/go_arrow"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -144,7 +144,7 @@
                 android:id="@+id/essay_tip_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@mipmap/bar_essay"
+                android:drawableLeft="@drawable/bar_essay"
                 android:drawablePadding="5dp"
                 android:text="杂文"
                 android:textColor="@color/normal_tv"
@@ -156,7 +156,7 @@
             <androidx.appcompat.widget.AppCompatImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/go_arrow"
+                android:src="@drawable/go_arrow"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -177,7 +177,7 @@
                 android:id="@+id/admin_tip_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@mipmap/admin_ic"
+                android:drawableLeft="@drawable/admin_ic"
                 android:drawablePadding="5dp"
                 android:text="管理员"
                 android:textColor="@color/normal_tv"
@@ -189,7 +189,7 @@
             <androidx.appcompat.widget.AppCompatImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/go_arrow"
+                android:src="@drawable/go_arrow"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -211,7 +211,7 @@
                 android:id="@+id/setting_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@mipmap/setting_ic"
+                android:drawableLeft="@drawable/setting_ic"
                 android:drawablePadding="5dp"
                 android:text="设置"
                 android:textColor="@color/normal_tv"
@@ -223,7 +223,7 @@
             <androidx.appcompat.widget.AppCompatImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/go_arrow"
+                android:src="@drawable/go_arrow"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
