--- a/app/src/main/res/layout/item_remove_code_type.xml
+++ b/app/src/main/res/layout/item_remove_code_type.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
         android:layout_marginRight="2dp"
-        android:src="@mipmap/add_type_ic"
+        android:src="@drawable/add_type_ic"
         app:layout_constraintRight_toRightOf="@+id/type_tv"
         app:layout_constraintTop_toTopOf="@+id/type_tv" />
 
