--- a/widgetlib/src/main/res/values/attrs.xml
+++ b/widgetlib/src/main/res/values/attrs.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="CircleImageView">
-        <attr name="civ_border_width" format="dimension" />
-        <attr name="civ_border_color" format="color" />
-        <attr name="civ_border_overlay" format="boolean" />
-        <attr name="civ_fill_color" format="color" />
+    <declare-styleable name="xwidget_CircleImageView">
+        <attr name="xwidget_civ_border_width" format="dimension" />
+        <attr name="xwidget_civ_border_color" format="color" />
+        <attr name="xwidget_civ_border_overlay" format="boolean" />
+        <attr name="xwidget_civ_fill_color" format="color" />
     </declare-styleable>
 </resources>
