viewbinding & daynight theme

--- a/app/src/main/res/layout/item_code_list.xml
+++ b/app/src/main/res/layout/item_code_list.xml
@@ -15,7 +15,7 @@
         android:ellipsize="end"
         android:gravity="start"
         android:singleLine="true"
-        android:textColor="@color/normal_tv"
+        android:textColor="?normal_tv"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
