--- a/app/src/main/res/layout/act_chart_data.xml
+++ b/app/src/main/res/layout/act_chart_data.xml
@@ -16,7 +16,7 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="总年数据"
-            android:textColor="@color/normal_tv"
+            android:textColor="?normal_tv"
             app:layout_constraintLeft_toLeftOf="parent" />
 
         <LinearLayout
