--- a/app/src/main/res/layout/act_setting.xml
+++ b/app/src/main/res/layout/act_setting.xml
@@ -22,7 +22,7 @@
             android:drawableLeft="@drawable/clear_setting_ic"
             android:drawablePadding="5dp"
             android:text="清除配置信息"
-            android:textColor="@color/normal_tv"
+            android:textColor="?normal_tv"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -55,7 +55,7 @@
             android:drawableLeft="@drawable/clear_cache_ic"
             android:drawablePadding="5dp"
             android:text="清除缓存文件"
-            android:textColor="@color/normal_tv"
+            android:textColor="?normal_tv"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -100,7 +100,7 @@
             android:drawableLeft="@drawable/version_ic"
             android:drawablePadding="5dp"
             android:text="检查更新"
-            android:textColor="@color/normal_tv"
+            android:textColor="?normal_tv"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
