--- a/app/src/main/res/layout/frag_sheet_type.xml
+++ b/app/src/main/res/layout/frag_sheet_type.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:text="我的频道"
-        android:textColor="@color/normal_tv"
+        android:textColor="?normal_tv"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -42,7 +42,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:text="移除的频道"
-        android:textColor="@color/normal_tv"
+        android:textColor="?normal_tv"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
