--- a/app/src/main/res/layout/item_remove_code_type.xml
+++ b/app/src/main/res/layout/item_remove_code_type.xml
@@ -14,7 +14,7 @@
         android:paddingRight="16dp"
         android:paddingBottom="8dp"
         android:text="编程"
-        android:textColor="@color/normal_tv"
+        android:textColor="?normal_tv"
         android:textSize="14sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
