--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ffd04b</color>
-    <color name="colorPrimaryDark">#f4ea2a</color>
+    <color name="colorPrimary">#FEA85C</color>
+    <color name="colorPrimaryDark">#FE975C</color>
     <color name="colorAccent">#03DAC5</color>
 
     <color name="app_bg_color">#F3F5F8</color>
-    <color name="normal_tv">#333</color>
     <color name="light_tv">#555</color>
     <color name="thin_tv">#999</color>
     <color name="black_color">#000</color>
