--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,8 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme" parent="BlogTheme">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowBackground">@color/app_bg_color</item>
         <item name="android:windowAnimationStyle">@style/act_anim_style</item>
     </style>
@@ -42,7 +39,7 @@
     </style>
 
     <!-- 底部导航栏字体样式 -->
-    <style name="BottomTabTextStyle" >
+    <style name="BottomTabTextStyle">
         <item name="android:textSize">14sp</item>
     </style>
 
