--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,8 @@
     tools:context=".MainActivity">
 
 
-    <FrameLayout
-        android:id="@+id/main_frame"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/main_vp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
