--- a/app/src/main/res/drawable/home_navigation_color_selector.xml
+++ b/app/src/main/res/drawable/home_navigation_color_selector.xml
@@ -5,6 +5,6 @@
     <item android:color="@color/colorPrimary" android:state_checked="true" />
 
     <!-- 默认状态 -->
-    <item android:color="?normal_tv" />
+    <item android:color="?attr/normal_tv" />
 
 </selector>
