--- a/app/src/main/res/layout/frag_manager_data.xml
+++ b/app/src/main/res/layout/frag_manager_data.xml
@@ -35,7 +35,7 @@
                 android:id="@+id/admin_name_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="?normal_tv"
+                android:textColor="?attr/normal_tv"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 tools:text="Admin" />
@@ -44,7 +44,7 @@
                 android:id="@+id/admin_identity_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="?normal_tv"
+                android:textColor="?attr/normal_tv"
                 android:textSize="14sp"
                 tools:text="超级管理员" />
 
@@ -81,7 +81,7 @@
                 android:drawableLeft="@drawable/chart_ic"
                 android:drawablePadding="5dp"
                 android:text="统计"
-                android:textColor="?normal_tv"
+                android:textColor="?attr/normal_tv"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -114,7 +114,7 @@
                 android:drawableLeft="@drawable/bar_code"
                 android:drawablePadding="5dp"
                 android:text="code"
-                android:textColor="?normal_tv"
+                android:textColor="?attr/normal_tv"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -147,7 +147,7 @@
                 android:drawableLeft="@drawable/bar_essay"
                 android:drawablePadding="5dp"
                 android:text="杂文"
-                android:textColor="?normal_tv"
+                android:textColor="?attr/normal_tv"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -180,7 +180,7 @@
                 android:drawableLeft="@drawable/admin_ic"
                 android:drawablePadding="5dp"
                 android:text="管理员"
-                android:textColor="?normal_tv"
+                android:textColor="?attr/normal_tv"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -214,7 +214,7 @@
                 android:drawableLeft="@drawable/setting_ic"
                 android:drawablePadding="5dp"
                 android:text="设置"
-                android:textColor="?normal_tv"
+                android:textColor="?attr/normal_tv"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
