--- a/app/src/main/res/layout/frag_manager_login.xml
+++ b/app/src/main/res/layout/frag_manager_login.xml
@@ -29,7 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="输入账户"
-            android:textColor="?normal_tv"
+            android:textColor="?attr/normal_tv"
             android:textColorHint="@color/hint_normal"
             android:textSize="14sp"
             android:theme="@style/my_et_2dp"
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:hint="输入密码"
-            android:textColor="?normal_tv"
+            android:textColor="?attr/normal_tv"
             android:textColorHint="@color/hint_normal"
             android:textSize="14sp"
             android:theme="@style/my_et_2dp"
