--- a/app/src/main/res/layout/item_admin_list.xml
+++ b/app/src/main/res/layout/item_admin_list.xml
@@ -21,7 +21,7 @@
         android:id="@+id/admin_name_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="?normal_tv"
+        android:textColor="?attr/normal_tv"
         android:textSize="16sp"
         android:textStyle="bold"
         tools:text="Admin" />
@@ -30,7 +30,7 @@
         android:id="@+id/admin_identity_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="?normal_tv"
+        android:textColor="?attr/normal_tv"
         android:textSize="14sp"
         tools:text="超级管理员" />
 
