--- a/app/src/main/res/layout/frag_code.xml
+++ b/app/src/main/res/layout/frag_code.xml
@@ -25,7 +25,7 @@
             android:layout_height="40dp"
             android:background="@color/app_bg_color"
             android:padding="8dp"
-            android:src="@drawable/add_ic"
+            android:src="@drawable/ic_baseline_add_24"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
