--- a/app/src/main/res/layout/act_setting.xml
+++ b/app/src/main/res/layout/act_setting.xml
@@ -5,128 +5,35 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/clear_setting_cl"
+    <com.app.xandone.widgetlib.view.SettingView
+        android:id="@+id/setting_sv"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
-        android:background="@color/white_color"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:xwidget_left_ic="@drawable/clear_setting_ic"
+        app:xwidget_text="清除配置信息"
+        app:xwidget_text_color="?attr/normal_tv" />
 
-        <TextView
-            android:id="@+id/clear_setting_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/clear_setting_ic"
-            android:drawablePadding="5dp"
-            android:text="清除配置信息"
-            android:textColor="?attr/normal_tv"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/go_arrow"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/clear_all_cache_cl"
+    <com.app.xandone.widgetlib.view.SettingView
+        android:id="@+id/all_cache_sv"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
-        android:background="@color/white_color"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/clear_setting_cl">
+        app:layout_constraintTop_toBottomOf="@+id/setting_sv"
+        app:xwidget_left_ic="@drawable/clear_setting_ic"
+        app:xwidget_text="清除缓存文件"
+        app:xwidget_text_color="?attr/normal_tv" />
 
-        <TextView
-            android:id="@+id/clear_all_cache_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/clear_cache_ic"
-            android:drawablePadding="5dp"
-            android:text="清除缓存文件"
-            android:textColor="?attr/normal_tv"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/all_cache_size_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/thin_tv"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/clear_all_cache_iv"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="30Mb" />
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/clear_all_cache_iv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/go_arrow"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/check_version_cl"
+    <com.app.xandone.widgetlib.view.SettingView
+        android:id="@+id/version_sv"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
-        android:background="@color/white_color"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/clear_all_cache_cl">
-
-        <TextView
-            android:id="@+id/check_version_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/version_ic"
-            android:drawablePadding="5dp"
-            android:text="检查更新"
-            android:textColor="?attr/normal_tv"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/current_version_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/thin_tv"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/current_version_iv"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="v1.0.0" />
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/current_version_iv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/go_arrow"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintTop_toBottomOf="@+id/all_cache_sv"
+        app:xwidget_left_ic="@drawable/clear_setting_ic"
+        app:xwidget_text="检查更新"
+        app:xwidget_text_color="?attr/normal_tv" />
 
     <TextView
         android:id="@+id/exit_btn"
