--- a/widgetlib/src/main/res/values/attrs.xml
+++ b/widgetlib/src/main/res/values/attrs.xml
@@ -6,4 +6,13 @@
         <attr name="xwidget_civ_border_overlay" format="boolean" />
         <attr name="xwidget_civ_fill_color" format="color" />
     </declare-styleable>
+
+    <declare-styleable name="xwidget_SettingView">
+        <attr name="xwidget_text" format="string" />
+        <attr name="xwidget_text_color" format="color" />
+        <attr name="xwidget_left_ic" format="reference" />
+        <attr name="xwidget_right_text" format="string" />
+        <attr name="xwidget_right_text_color" format="color" />
+    </declare-styleable>
+
 </resources>
