--- a/app/src/main/res/layout/act_setting.xml
+++ b/app/src/main/res/layout/act_setting.xml
@@ -21,7 +21,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/setting_sv"
-        app:xwidget_left_ic="@drawable/clear_setting_ic"
+        app:xwidget_left_ic="@drawable/clear_cache_ic"
         app:xwidget_text="清除缓存文件"
         app:xwidget_text_color="?attr/normal_tv" />
 
@@ -31,9 +31,41 @@
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/all_cache_sv"
-        app:xwidget_left_ic="@drawable/clear_setting_ic"
+        app:xwidget_left_ic="@drawable/version_ic"
         app:xwidget_text="检查更新"
         app:xwidget_text_color="?attr/normal_tv" />
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/xwidget_layout_click_bg"
+        android:paddingHorizontal="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/version_sv">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_baseline_brightness_2_24"
+            android:drawablePadding="5dp"
+            android:text="夜间模式"
+            android:textColor="?attr/normal_tv"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.kyleduo.switchbutton.SwitchButton
+            android:id="@+id/moon_sb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:kswTintColor="@color/colorPrimary"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <TextView
         android:id="@+id/exit_btn"
