--- a/app/src/main/res/layout/act_setting.xml
+++ b/app/src/main/res/layout/act_setting.xml
@@ -11,6 +11,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toTopOf="parent"
+        app:xwidget_bg="@drawable/setting_view_click_bg"
         app:xwidget_left_ic="@drawable/clear_setting_ic"
         app:xwidget_text="清除配置信息"
         app:xwidget_text_color="?attr/normal_tv" />
@@ -21,6 +22,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/setting_sv"
+        app:xwidget_bg="@drawable/setting_view_click_bg"
         app:xwidget_left_ic="@drawable/clear_cache_ic"
         app:xwidget_text="清除缓存文件"
         app:xwidget_text_color="?attr/normal_tv" />
@@ -31,6 +33,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/all_cache_sv"
+        app:xwidget_bg="@drawable/setting_view_click_bg"
         app:xwidget_left_ic="@drawable/version_ic"
         app:xwidget_text="检查更新"
         app:xwidget_text_color="?attr/normal_tv" />
@@ -40,7 +43,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/xwidget_layout_click_bg"
+        android:background="@drawable/setting_view_click_bg"
         android:paddingHorizontal="10dp"
         app:layout_constraintTop_toBottomOf="@+id/version_sv">
 
