--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         android:id="@+id/bottom_bar"
         android:layout_width="match_parent"
         android:layout_height="64dp"
-        android:background="@color/white"
+        android:background="?attr/view_bg_color"
         app:itemBackground="@null"
         app:itemIconTint="@drawable/navi_ic_color"
         app:itemTextAppearanceActive="@style/BottomTabTextStyle"
