--- a/app/src/main/res/layout/frag_code.xml
+++ b/app/src/main/res/layout/frag_code.xml
@@ -23,7 +23,7 @@
             android:id="@+id/add_type_iv"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:background="@color/app_bg_color"
+            android:background="?attr/app_bg"
             android:padding="8dp"
             android:src="@drawable/ic_baseline_add_24"
             app:layout_constraintRight_toRightOf="parent"
