--- a/app/src/main/res/layout/frag_manager_data.xml
+++ b/app/src/main/res/layout/frag_manager_data.xml
@@ -9,7 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white_color"
+        android:background="?attr/view_bg_color"
         android:paddingTop="30dp"
         android:paddingBottom="30dp">
 
@@ -52,7 +52,7 @@
                 android:id="@+id/admin_last_login_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/light_tv"
+                android:textColor="?attr/normal_tv"
                 android:textSize="14sp"
                 tools:text="最近登录：2020-2222-222" />
 
@@ -69,7 +69,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="10dp"
-            android:background="@color/white_color"
+            android:background="?attr/view_bg_color"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             app:layout_constraintTop_toTopOf="parent">
@@ -102,7 +102,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="10dp"
-            android:background="@color/white_color"
+            android:background="?attr/view_bg_color"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             app:layout_constraintTop_toBottomOf="@+id/chart_tip_cl">
@@ -135,7 +135,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="10dp"
-            android:background="@color/white_color"
+            android:background="?attr/view_bg_color"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             app:layout_constraintTop_toBottomOf="@+id/code_tip_cl">
@@ -168,7 +168,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="10dp"
-            android:background="@color/white_color"
+            android:background="?attr/view_bg_color"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             app:layout_constraintTop_toBottomOf="@+id/essay_tip_cl">
@@ -202,7 +202,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="10dp"
-            android:background="@color/white_color"
+            android:background="?attr/view_bg_color"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             app:layout_constraintTop_toBottomOf="@+id/admin_tip_cl">
