--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,6 +2,10 @@
 <resources>
 
     <style name="BlogTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="android:windowBackground">@color/app_bg_color_night</item>
+        <item name="app_bg">@color/app_bg_color_night</item>
         <item name="normal_tv">@color/main_tv_night</item>
+        <item name="view_bg_color">@color/view_bg_color_night</item>
+        <item name="view_click_color">@color/view_click_color_ngiht</item>
     </style>
 </resources>
