--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:windowBackground">@color/app_bg_color</item>
+<!--        <item name="android:windowBackground">@color/app_bg_color</item>-->
         <item name="android:windowAnimationStyle">@style/act_anim_style</item>
     </style>
 
