--- a/widgetlib/src/main/res/layout/xwidget_v_setting_layout.xml
+++ b/widgetlib/src/main/res/layout/xwidget_v_setting_layout.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/setting_root_cl"
     android:layout_width="match_parent"
     android:layout_height="50dp"
     android:background="@drawable/xwidget_layout_click_bg"
@@ -26,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="5dp"
         android:textColor="@color/xwidget_text_default"
-        android:textSize="16sp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/setting_arrow_iv"
         app:layout_constraintTop_toTopOf="parent" />
